# attribute-server

./: Cargo.toml  README.md  query-entities.json
ardupilot/: Cargo.toml
ardupilot/src/: codec.rs  connection.rs  decoder.rs  encoder.rs  lib.rs  main.rs  mission.rs
attribute-cli/: Cargo.toml  build.rs
attribute-cli/proto/: mavlink.proto
attribute-cli/requests/: create-attribute-type.json  query-entities.json  query-entity-rows.json  update-entity.json  watch-entities.json  watch-entity-rows.json  watch-mavlink-position.json
attribute-cli/src/: attributes.rs  control_loop.rs  fmt.rs  json.rs  main.rs  mavlink.rs  pb.rs
attribute-grpc-api/: Cargo.toml  build.rs
attribute-grpc-api/proto/: attribute.proto
attribute-grpc-api/src/: lib.rs
attribute-server/: Cargo.toml  build.rs
attribute-server/proto/: internal.proto
attribute-server/src/: convert.rs  grpc.rs  main.rs
attribute-store/: Cargo.toml
attribute-store/src/: inmemory.rs  lib.rs  store.rs
proto/: attribute.proto
