[package]
name = "attribute-cli"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
attribute-grpc-api = { version = "0.0.0", path = "../attribute-grpc-api" }
clap = { version = "4.5.8", features = ["derive"] }
tonic = "0.11.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
serde_json = "1.0.120"
