[package]
name = "attribute-cli"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
attribute-grpc-api = { version = "0.0.0", path = "../attribute-grpc-api" }
clap = { version = "4.5.8", features = ["derive"] }
tonic = "0.12.1"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
serde_json = "1.0.120"
clap_complete = "4.5.7"
serde = "1.0.203"
thiserror = "1.0.61"
tonic-types = "0.12.1"
prost-reflect = { version = "0.14.0", features = ["serde"] }
