[package]
name = "attribute-cli"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.8", features = ["derive"] }
tonic.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true, features = ["log"] }
serde_json = "1.0.120"
clap_complete = "4.5.7"
serde = { version = "1.0.203", features = ["derive"] }
thiserror.workspace = true
tonic-types = "0.12.1"
prost.workspace = true
prost-reflect = { version = "0.14.0", features = ["serde", "derive"] }
serde_path_to_error = "0.1.16"
maviola = { version = "0.1.3", features = ["async", "ardupilotmega", "serde", "derive", "standard", "common"] }
base64 = "0.22.1"

[build-dependencies]
prost-build = "0.13.1"
prost-reflect-build = "0.14.0"
tonic-build = "0.12.1"
