[package]
name = "attribute-grpc-api"
version = "0.0.0"
edition = "2021"

[dependencies]
prost = "0.13.1"
prost-reflect = { version = "0.14.0", features = ["serde", "derive"] }
serde = { version = "1.0.203", features = ["derive"] }
tonic = "0.12.1"

[build-dependencies]
prost-build = "0.13.1"
prost-reflect-build = "0.14.0"
tonic-build = "0.12.1"
