[package]
name = "attribute-server"
version = "0.0.0"
edition = "2021"

[dependencies]
tonic.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tower = { version = "0.5.1" , features = ["timeout"] }
anyhow.workspace = true
attribute-store = { version = "0.0.0", path = "../attribute-store" }
thiserror.workspace = true
base64 = "0.22.1"
prost.workspace = true
tonic-types = "0.12.2"
log.workspace = true
garde = { workspace = true, features = ["derive", "regex"] }
parking_lot = "0.12.3"
tokio-stream = { workspace = true, features = ["sync"] }

[build-dependencies]
tonic-build = "0.12.1"
