[package]
name = "attribute-store"
version = "0.0.0"
edition = "2021"

[dependencies]
thiserror = "1.0.61"
regex = "1.10.5"
async-trait = "0.1.80"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
log = "0.4.22"

[dev-dependencies]
assert_matches = "1.5.0"
