[package]
name = "attribute-store"
version = "0.0.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
regex.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing.workspace = true
log.workspace = true
parking_lot = "0.12.3"
garde = { workspace = true, features = ["derive", "regex"] }

[dev-dependencies]
assert_matches = "1.5.0"
